# proxide

./: .dockerignore  Cargo.toml  Dockerfile  README.md  action.yml  entrypoint.sh
.github/workflows/: publish.yml  publish_dry_run.yml  pull_request.yml
extra/templates/: example.tpl
schema/: schema.graphql
schema/queries/: contributions.graphql  pull_requests.graphql  repositories.graphql  viewer.graphql
src/: cli.rs  main.rs  template.rs
src/sources/: github.rs  mod.rs  rss.rs
templates/: example.tpl
