[package]
name = "proxide"
version = "0.0.1"
edition = "2021"

[dependencies]
graphql_client = { version = "0.13.0", features = ["reqwest-blocking"] }
reqwest = { version = "0.11.20", features = ["json", "blocking"] }
clap = { version = "4.4.2", features = ["derive", "env"] }
chrono = { version = "0.4.30", features = ["serde"] }
thiserror = "1.0.48"
serde = "1.0.188"
tera = "1.19.1"
